# ESP32_camera_1

./: .gitignore  CMakeLists.txt  ReadMe.md  pyproject.toml  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  camera_init.c  camera_init.h  camera_pins.h  http_stream.c  main.c  wifi_init.c
